--- a/contato.html
+++ b/contato.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Site teste - contato</h1>
+    <hr>
+    <input type="email" placeholder="email@example.com">
 </body>
 </html>
