campo 'nome' em contato

--- a/contato.html
+++ b/contato.html
@@ -8,6 +8,9 @@
 <body>
     <h1>Site teste - contato</h1>
     <hr>
+    
     <input type="email" placeholder="email@example.com">
+    <input type="text" placeholder="None">
+
 </body>
 </html>
